Update ML predictor

--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
       <span>Refresh Standings</span>
     </button>
   </div>
-  <p class="text-gray-400 text-sm" id="lastUpdated">Updated: Live from FastF1</p>
+  <p class="text-gray-400 text-sm" id="lastUpdated">Updated: Live from Ergast 
+    F1</p>
 </div>
 
     <div class="overflow-x-auto">
